--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1515,6 +1515,16 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
     z-index: -1;
 }
 
+.sheet-techniques .sheet-row-details.sheet-notebox {
+    height: 108px;
+    padding: 0 4px;
+}
+
+.sheet-techniques .sheet-row-details.sheet-notebox .sheet-col-notebox {
+    height: 108px;
+    width: 100%;
+}
+
 /* -- COMBAT -- */
 .sheet-active-defense { width: calc(100% - 140px - 0.8em); }
 .sheet-active-defense .sheet-col0 { width: calc(100% - 169px); }
