--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -265,6 +265,7 @@ div.sheet-matrix-device .sheet-matrixFirewall {
   margin-left: -1%;
   padding-left: 0.5%;
   /***** REPEATING CONTAINERS *****/
+  /***** SKILLS *****/
   /***** SKILLS *****/ }
   .sheet-pc button > h2:hover,
   .sheet-pc button > span:hover,
@@ -1234,6 +1235,8 @@ input.sheet-skill-select[type='checkbox'] {
 
 div.sheet-spell-box h3[data-i18n="modifier"] {
   width: 12%; }
+div.sheet-spell-box div.sheet-magic-preps select {
+  width: 14%; }
 
 .sheet-spell-box h3,
 .sheet-spell-box .sheet-display .sheet-display-row,
@@ -1729,10 +1732,6 @@ div.sheet-spell-box h3[data-i18n="modifier"] {
 
 .sheet-repeating button.sheet-display {
   text-align: left; }
-
-.sheet-repeating input[type='checkbox'],
-.sheet-repeating input[type='checkbox'] + span {
-  position: absolute; }
 
 .sheet-repeating input[type='checkbox'] {
   width: 15px;
