--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -93,7 +93,7 @@ include src/pug/_variables.pug
 									button.pictos(name='act_skill' type='action') x
 									if key === 'active'
 										select.skill-select.settings(name='attr_skill' value='Close Combat Group' title='@{repeating_'+val[0]+'_${x}_skill}')
-											include src/pug/skillselect.html
+											include src/html/skillselect.html
 									else
 										label.settings(data-i18n-title='skill' title='skill')
 											input(name='attr_skill' placeholder=key type='text' title='@{repeating_'+val[0]+'_${x}_skill}')
@@ -225,7 +225,7 @@ include src/footer.html
 include src/rolltemplates.html
 
 //- HIDDEN
-include src/hidden.html
+include src/html/hidden.html
 
 //- SCRIPTS
 include src/pug/scripts.js
