--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -245,7 +245,6 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 		input.sheet-display-flag { position: absolute; }
 
 		/***** REPEATING CONTAINERS *****/
-
 		div.repitem {
 			input[type='number'] {
 				text-align: center;
@@ -301,8 +300,11 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				option:nth-of-type(1n+5) { color: $red; }
 			}
 		}
+
+		/***** SKILLS *****/
 	}
 	@import 'src/scss/_pc'; 
+
 
 /******************************************************************************************/
 /**************************** START OF THE NPC SHEET *************************************/
