--- a/Shadowrun5thEdition/src/pug/_npc.pug
+++ b/Shadowrun5thEdition/src/pug/_npc.pug
@@ -227,7 +227,7 @@
 						h2(data-i18n='limit') Limit
 						if key === 'active'
 							select.skill-select(name='attr_skill' title='@{repeating_'+key+'_${x}_skill}' value='Close Combat Group')
-								include skillselect.html
+								include ../html/skillselect.html
 						else
 							label(data-i18n-title='skill' title='skill')
 								input(name='attr_skill' placeholder=key title='@{repeating_'+key+'_${x}_skill}' type='text' )
@@ -254,7 +254,7 @@
 				.settings
 					h2.full-row(data-i18n='skill') Skill
 					select.skill-select(name='attr_skill' title='@{repeating_'+key+'_${x}_skill}')
-						include skillsselectsprite.html
+						include ../html/skillsselectsprite.html
 
 		//- SPRITE POWERS
 		.rows.sprite.repeating.inline-repeating
