--- a/Shadowrun5thEdition/src/scss/_pc.scss
+++ b/Shadowrun5thEdition/src/scss/_pc.scss
@@ -1019,6 +1019,11 @@
 
 		div.sheet-spell-box {
 			h3[data-i18n="modifier"] { width: 12%; }
+
+
+			div.sheet-magic-preps {
+				select { width: 14%; }
+			}
 		}
 
 		.sheet-spell-box h3,
@@ -1535,10 +1540,6 @@
 
     .sheet-repeating button.sheet-display {
       text-align: left;} 
-
-    .sheet-repeating input[type='checkbox'],
-    .sheet-repeating input[type='checkbox'] + span {
-      position: absolute;}
 
     .sheet-repeating input[type='checkbox'] {
       width: 15px;
