--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1011,6 +1011,11 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 .sheet-encumberance { width: calc(100% - 180px - 100px - 1.2em); }
 .sheet-encumberance .sheet-colToggle { position: relative;}
 .sheet-encumberance .sheet-col0 { width: 100px; }
+.sheet-encumberance .sheet-col0.sheet-current-label { 
+    font-size: 14px;
+    text-align: left;
+    font-weight: bold;
+}
 .sheet-encumberance .sheet-col1 { width: calc((100% - 100px) * 0.4); }
 .sheet-encumberance .sheet-colAll { width: calc((100% - 100px) * 0.166); }
 .sheet-encumberance .sheet-col2 { width: calc((100% - 100px) * 0.3); }
@@ -1100,6 +1105,14 @@ input.sheet-toggle-encumbrance[type="checkbox"]:checked ~ div.sheet-encumbrance-
 }
 
 input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumbrance-table-body {
+    display: none;
+}
+
+input[type="checkbox"][name="attr_toggle_turn_deceleration"]:checked ~ div.sheet-turn-decelerate-container {
+    display: block;
+}
+
+input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div.sheet-turn-decelerate-container {
     display: none;
 }
 
