--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -334,7 +334,8 @@ input {
     background: #FAFAFA;
 }
 
-.sheet-box .sheet-row-details2 {
+.sheet-box .sheet-row-details2,
+.sheet-box .sheet-ranged-notebox {
     background: #FAFAFA;
 }
 
@@ -454,13 +455,23 @@ input.sheet-tab0 + span {
 */
 
 .sheet-toggle:checked ~ .sheet-row-details2 { 
-    display: inline-block; 
-    margin: 0 0 2px 0;
+    display: inline-block;
 }
 
 .sheet-toggle ~ .sheet-row-details2 { 
     display: none; 
 }
+
+.sheet-toggle:checked ~ .sheet-ranged-notebox {
+    display: inline-block;
+    padding-bottom: 5px;
+    width: 100%;
+}
+
+.sheet-toggle ~ .sheet-ranged-notebox { 
+    display: none; 
+}
+
 
 /*
 .sheet-box .sheet-row-details2:hover,
@@ -819,7 +830,6 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-box .sheet-row-details2 .sheet-col3 { width: 250px; }
 .sheet-box .sheet-row-details2 .sheet-col3 input { text-align: left; }
 
-
 /* -- TOOLTIPS -- */
 .sheet-lift .sheet-tooltip { margin-left: -170px; }
 .sheet-miscelleneous .sheet-tooltip { margin-left: -75px; }
@@ -829,6 +839,7 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
     width: 50%;
 }
 .sheet-melee-attacks .sheet-tooltip { margin-left: -100px; }
+.sheet-melee-attacks .sheet-row-details2 .sheet-tooltip { margin-left: -40px; }
 .sheet-ranged-attacks .sheet-tooltip { margin-left: -100px; }
 .sheet-ranged-attacks .sheet-col1 .sheet-tooltip { margin-left: -40px; }
 .sheet-encumberance .sheet-tooltip { margin-left: -40px; }
@@ -1000,6 +1011,11 @@ input.sheet-toggle-unspoint-points[value="0"] ~ .sheet-row-total {
 .sheet-encumberance { width: calc(100% - 180px - 100px - 1.2em); }
 .sheet-encumberance .sheet-colToggle { position: relative;}
 .sheet-encumberance .sheet-col0 { width: 100px; }
+.sheet-encumberance .sheet-col0.sheet-current-label { 
+    font-size: 14px;
+    text-align: left;
+    font-weight: bold;
+}
 .sheet-encumberance .sheet-col1 { width: calc((100% - 100px) * 0.4); }
 .sheet-encumberance .sheet-colAll { width: calc((100% - 100px) * 0.166); }
 .sheet-encumberance .sheet-col2 { width: calc((100% - 100px) * 0.3); }
@@ -1089,6 +1105,14 @@ input.sheet-toggle-encumbrance[type="checkbox"]:checked ~ div.sheet-encumbrance-
 }
 
 input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumbrance-table-body {
+    display: none;
+}
+
+input[type="checkbox"][name="attr_toggle_turn_deceleration"]:checked ~ div.sheet-turn-decelerate-container {
+    display: block;
+}
+
+input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div.sheet-turn-decelerate-container {
     display: none;
 }
 
@@ -1504,6 +1528,16 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
     z-index: -1;
 }
 
+.sheet-techniques .sheet-row-details.sheet-notebox {
+    height: 108px;
+    padding: 0 4px;
+}
+
+.sheet-techniques .sheet-row-details.sheet-notebox .sheet-col-notebox {
+    height: 108px;
+    width: 100%;
+}
+
 /* -- COMBAT -- */
 .sheet-active-defense { width: calc(100% - 140px - 0.8em); }
 .sheet-active-defense .sheet-col0 { width: calc(100% - 169px); }
@@ -1547,13 +1581,14 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
 }
 
 .sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-stats,
-.sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-details2 {
+.sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-details2,
+.sheet-melee-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-ranged-notebox {
     background: #B7FFAA;    
 }
 
 /* -- Ranged Attacks -- */
 .sheet-ranged-attacks { width: calc(100% - 140px - 0.8em); }
-.sheet-ranged-attacks .sheet-col0 { width: calc(100% - 441px); }
+.sheet-ranged-attacks .sheet-col0 { width: calc(100% - 433px); }
 .sheet-ranged-attacks .sheet-col0-st { width: calc(100% - 558px); }
 .sheet-ranged-attacks .sheet-col0 input { text-align:left; }
 .sheet-ranged-attacks .sheet-col1 { width: 60px; }
@@ -1569,10 +1604,25 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
 .sheet-ranged-attacks .sheet-col9 { width: 35px; }
 .sheet-ranged-attacks .sheet-col10 { width: 30px; }
 .sheet-ranged-attacks .sheet-col11 { width: 22px; }
+.sheet-ranged-attacks .sheet-col-verify { width: 75px; }
 .sheet-ranged-attacks .sheet-header .sheet-col10 { width: 52px; }
-.sheet-ranged-attacks .sheet-row-stats .sheet-col0 { margin-left: 48px; width: calc(100% - 485px); }
+.sheet-ranged-attacks .sheet-row-stats .sheet-col0 { margin-left: 48px; width: calc(100% - 483px); }
 .sheet-ranged-attacks .sheet-row-stats .sheet-col0-st { margin-left: 20px; width: calc(100% - 580px); }
 .sheet-ranged-attacks .sheet-row-stats.sheet-row-thrown-object { height: 28px; }
+
+.sheet-ranged-attacks .sheet-custom-checkbox label {
+    font-size: 12px;
+    margin: 0 0 0 10px;
+}
+
+.sheet-ranged-attacks .sheet-custom-checkbox input[type="checkbox"] {
+    width: 16px;
+    height: 22px;
+    opacity: 1;
+    position: absolute;
+    margin-left: 5px;
+    line-height: 22px;
+}
 
 /* -- highlight row -- */
 .sheet-ranged-attacks .repcontainer.ui-sortable.editmode .sheet-toggle-highlight {
@@ -1594,10 +1644,38 @@ input.sheet-toggle-encumbrance[type="checkbox"]:not(:checked) ~ div.sheet-encumb
 }
 
 .sheet-ranged-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-stats,
-.sheet-ranged-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-details2 {
+.sheet-ranged-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-row-details2,
+.sheet-ranged-attacks input.sheet-toggle-highlight[type="checkbox"]:checked ~ .sheet-ranged-notebox {
     background: #B7FFAA;    
 }
 
+.sheet-ranged-notebox input.sheet-text-left {
+    text-align: left;
+}
+
+.sheet-ranged-notebox .sheet-col-normal {
+    width: 87px;
+    margin-left: 4px;
+    text-align: left;
+}
+
+.sheet-ranged-notebox .sheet-col-input {
+    width: 33px;
+    margin-left: 4px;
+    text-align: left;
+}
+
+.sheet-ranged-notebox .sheet-col-auto {
+    width: calc(100% - 434px);
+}
+
+.sheet-ranged-notebox .sheet-col-wide {
+    width: 250px;
+}
+
+.sheet-ranged-notebox .sheet-tooltip {
+    margin-left: 0;
+}
 
 /* -- Combat Tools: Range Calculator -- */
 .sheet-firing-up-down {
