--- a/Ryuutama/Ryuutama.css
+++ b/Ryuutama/Ryuutama.css
@@ -1,44 +1,27 @@
 @font-face {
-  font-family: Charm;
-  src: url(https://fonts.googleapis.com/css?family=Charm);
+font-family: Charm;
+src: url(url(https://fonts.gstatic.com/s/charm/v4/7cHmv4oii5K0MdYoK-4.woff2), url(https://fonts.gstatic.com/s/tinos/v13/buE4poGnedXvwjX7fmQ.woff2), ;
 }
 
 * {
-    font-family: 'Charm', 'Apple Chancery', 'Palatino Linotype', cursive;
+    font-family: 'Charm', 'Apple Chancery', 'Palatino Linotype', Helvetica, Arial, sans-serif;
 }
 
-/*Start of NPC checkbox functionality*/
-.sheet-block-switch,
-.sheet-npc-switch-label {
-    float: right;
-    overflow: auto;
-    margin 0px;
-    padding 0px
+* , *:before, *:after{ 
+    box-sizing:border-box; 
+    -moz-box-sizing:border-box; 
+    -webkit-box-sizing:border-box; 
+    -ms-box-sizing:border-box;
 }
-
-.sheet-block-a,
-.sheet-block-switch:checked ~ .sheet-block-b {
-    display: block;
-}
-
-.sheet-block-b,
-.sheet-block-switch:checked ~ .sheet-block-a {
-    display: none;
-}
-/*End of NPC checkbox functionality*/
 
 textarea {
     border-radius: 6px;
-    /*border: 1px solid #99dd99;*/
-    /*background-color: #eefdfd;*/
     line-height: 20px;
     width: 98%;
 }
 
 input[type=number], input[type=text], select {
     border-radius: 6px;
-    /*border: 1px solid #99dd99;*/
-    /*background-color: #eefdfd;*/
     line-height: 20px;
     height: 30px;
     max-width: 200px;
@@ -60,6 +43,38 @@ button[type=roll] {
 hr {
     margin: 12px;
 }
+
+.sheet-flex {
+    display: flex;
+    justify-content: space-around;
+}
+
+.sheet-flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.sheet-logo {
+    width: auto;
+    height: 120px;
+    margin-top: 10px;
+}
+
+.sheet-partyOptions {
+    display: flex;
+    justify-content: flex-start;
+    margin: 9px;
+}
+
+.sheet-personalItems {
+    justify-content: flex-start;
+}
+
+.sheet-round-box {
+    border: 2px solid gray;
+    border-radius: 9px;
+    padding: 9px;
+}   
 
 .sheet-charoptions {
     width: 100px;
@@ -130,14 +145,20 @@ hr {
 }
 
 .sheet-coreAttributes {
-	display: flex;
-	flex-flow: row;
-	justify-content: space-around;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-around;
 }
 
 .sheet-attrLabel {
-    position: relative;
-    top: 10px;
+    background: #aaeeaa;
+    color: black;
+    font-size: 1.1em;
+    font-weight: bold;
+    margin: 6px 0 3px 0;
+    width: 98%;
+    padding-left: 6px;
+    border-radius: 3px;
 }
 
 .sheet-healthLabel, .sheet-infoLabel {
@@ -283,7 +304,7 @@ input.sheet-overburdenPenalty {
 }
 
 .sheet-headerLabel-eq {
-     font-size: 13.8px;
+    font-size: 13px;
 }
 
 .sheet-loweredHeaderLabel {
@@ -307,16 +328,17 @@ input.sheet-overburdenPenalty {
 
 .sheet-concentration {
     display: inline;
-    /*margin-left: 10px;*/
 }
 
-/* Weapon Mastery */
+/* Weapon Mastery 
+    ============================= */
 input.sheet-radioChoice {
     width: 130px;
     cursor: pointer;
     position: relative;
     opacity: 0;
     z-index: 9999;
+    height: 18px;
 }
 
 span.sheet-radioChoice {
@@ -345,7 +367,12 @@ inpur.sheet-radioChoice6:checked + span.sheet-radioChoice6 {
     color: white;
 }
 
-/* High Level Tabs */
+.sheet-weaponBar {
+    padding-left: 10px;
+}
+
+/* High Level Tabs
+    ============================= */
 input.sheet-tab {
     width: 150px;
     height: 40px;
@@ -397,12 +424,13 @@ input.sheet-tab2:checked ~ span.sheet-characterClass,
 input.sheet-tab3:checked ~ span.sheet-characterStats,
 input.sheet-tab4:checked ~ span.sheet-characterChecks,
 input.sheet-tab5:checked ~ span.sheet-characterEquipment {
-	display: block;
+    display: block;
     background-color: #eeffff;
     padding: 5px;
 }
 
-/* Roll Templates */
+/* Roll Templates
+    ============================= */
 .sheet-rolltemplate-skillCheck .sheet-rollTitle,
 .sheet-rolltemplate-accuracyCheck .sheet-rollTitle,
 .sheet-rolltemplate-oneDieCheck .sheet-rollTitle {
@@ -419,7 +447,6 @@ input.sheet-tab5:checked ~ span.sheet-characterEquipment {
     font-family: 'Charm', 'Palatino Linotype', 'Apple Chancery', cursive;
 }
 
-/* Colors for the rolltemplate title */
 .sheet-rolltemplate-skillCheck .sheet-rollTitle,
 .sheet-rolltemplate-oneDieCheck .sheet-rollTitle,
 .sheet-rolltemplate-accuracyCheck .sheet-rollTitle {background-color:#aaa57c;}
@@ -483,12 +510,12 @@ input.sheet-tab5:checked ~ span.sheet-characterEquipment {
     margin-left: 5px;
 }
 
-/*Styling that removes the box around roll buttons*/
-
+/* Styling that removes the box around roll buttons
+    ============================= */
 button[type=roll].sheet-skill-check-button::before { content: ''; }
 
 button[type=roll].sheet-skill-check-button:hover {
-  color: #229999;
+color: #229999;
 }
 
 button[type=roll].sheet-skill-check-button {
@@ -503,14 +530,34 @@ button[type=roll].sheet-skill-check-button {
     margin: 0px;
 }
 
-/* NPC Sheet styling*/
+/* NPC checkbox functionality
+    ============================= */
+.sheet-block-switch,
+.sheet-npc-switch-label {
+    float: right;
+    overflow: auto;
+    margin 0px;
+    padding 0px
+}
 
+.sheet-block-a,
+.sheet-block-switch:checked ~ .sheet-block-b {
+    display: block;
+}
+
+.sheet-block-b,
+.sheet-block-switch:checked ~ .sheet-block-a {
+    display: none;
+}
+
+
+/* NPC Sheet styling
+    ============================= */
 .sheet-npc-sheet-container * {
     font-family: Helvetica, sans-serif;
     font-weight: bold;
     font-size: 12px;
     background-color: #ffffff;
-    /*border: solid black 1px;*/
 }
 
 .sheet-npc-sheet-container table {
@@ -599,12 +646,12 @@ input::-webkit-inner-spin-button {
 
 .sheet-npc-table-section-bottom-c {
     background-color: #92C9CE;
-     width: 20%;
+    width: 20%;
 }
 
 .sheet-npc-table-section-bottom-d {
     background-color: #E7EFF1;
-     width: 40%;
+    width: 40%;
 }
 
 .sheet-npc-details {
