--- a/Shadowrun5thEdition/src/pug/_npc.pug
+++ b/Shadowrun5thEdition/src/pug/_npc.pug
@@ -279,7 +279,8 @@
 				span.pictos x
 				input(name='attr_weapon' type='hidden' value='')
 				span(name='attr_weapon_dice')
-				+npcButton(weaponButton)
+				+displayRollButton(weaponButton, true)
+				span(name='attr_weapon')
 				.settings
 					input(name='attr_weapon_range' type='hidden' value='range')
 					each val, key in npcWeaponsObject
@@ -289,13 +290,14 @@
 					each val, key in npcWeaponsObject
 						- const translationKey = key.toLowerCase();
 						- const attrName = key === 'Dam' ? 'dv' : key === 'Modes' ? 'mode' : key === 'Notes' ? 'note' : key.toLowerCase();
+						- const defaultValue = key === 'Reach' ? 0 : '';
 						if (key === 'Range')
 							select(name='attr_weapon_'+attrName title='@{repeating_weapon_${x}_weapon_'+attrName+'}' value=val['default'])
 								option(data-i18n='range' value='range' selected) range
 								option(data-i18n='melee' value='melee') melee
 						else
 							label(data-i18n-title=translationKey title=key)
-								input(name='attr_weapon_'+attrName placeholder=val['placeholder'] title='@{repeating_weapon_${x}_weapon_'+attrName+'}' type=val['type'])
+								input(name='attr_weapon_'+attrName placeholder=val['placeholder'] title='@{repeating_weapon_${x}_weapon_'+attrName+'}' type=val['type'] value=defaultValue)
 					span (c)
 
 		//- SPELLS
@@ -306,7 +308,7 @@
 				span.pictos x
 				input(name='attr_spell' type='hidden' value='')
 				span(name='attr_dice')
-				+npcButton(spellButton)
+				+displayRollButton(npcSpellButton, true)
 				span(name='attr_spell')
 				.settings
 					input(name='attr_category' type='hidden' value='')
@@ -340,7 +342,7 @@
 				span.pictos x
 				input(name='attr_form' type='hidden' value='')
 				span(name='attr_form_dice')
-				+npcButton(formButton)
+				+displayRollButton(formButton, true)
 				span(name='attr_form')
 				.settings
 					each val, key in npcComplexFormsObject
@@ -370,7 +372,7 @@
 				input(name='attr_flag' title='Settings toggle' type='checkbox' checked)
 				span.pictos x
 				input(name='attr_IC' type='hidden' value='')
-				+npcButton(icButton)
+				+displayRollButton(icButton, false)
 				span(name='attr_IC')
 				.settings
 					each val, key in icObject
