--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -75,7 +75,9 @@
     }
 
     /* SHOW COLLAPSABLE DESCRIPTIONS AFTER CLICKING HIDDEN CHECKBOX */
-    input.sheet-display-flag ~ div.sheet-collapsable { height: auto; }
+    input.sheet-display-flag:checked ~ div.sheet-collapsable { 
+    	height: auto; 
+    }
 
 	@each $specialAttribute in $specialCharacters {
 		//-PCs
