--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -144,44 +144,47 @@ include src/pug/_variables.pug
 					input.magic-toggle(name='attr_magic_toggle' title='@{magic_toggle}' type='radio' value='rituals')
 					h1(data-i18n='rituals') Rituals
 					.right-tri
-			.border-box.repeat-box
+			.border-box
 				.pc-box.medium-box
 					+fadeDrainSection('drain')
-					.row-long
-						each val in ['spells', 'type', 'range', 'duration', 'drain']
-							h3(data-i18n=val) #{val}
-
 					input.magic-toggle(name='attr_magic_toggle' type='hidden' value='spells')
 					include src/magic.html
 
-					.magic-preps
-						.rows.repeating
-							include src/preps.html
 
-						.rows.repeating
-							h2(data-i18n='preperation') preperation
+					.magic-spells.spellsForumlas
+						+pcSpells('spell')
+
+					.magic-preps.spellsForumlas
+						+pcSpells('preps')
+
+						.rows.repeating-container.prepared-preparations
+							h2(data-i18n='preperations') preperations
+							.row-long.headers
+								each val in ['name', 'force', 'potency', 'trigger']
+									h3(data-i18n=val) #{val}
 							fieldset(class='repeating_preperations')
-								input.toggle(name='attr_flag' title='Settings toggle' type='checkbox' checked)
+								+displayRollButton(prepButton, false)
+								each val in ['force', 'potency', 'trigger']
+									span.center(name='attr_'+val)
+								input.collapse-flag(name='attr_display_flag' type='checkbox')
+								span.pictos i
+								input.settings-toggle(name='attr_flag' title='Settings toggle' type='checkbox' checked)
 								span.pictos x
-								button(name='preperation' type='roll' value='@{gm_toggle} &{template:rolls}{{header=@{name}}}{{desc=@{note}}}')
-									span(name='attr_name')
-								span(name='attr_note')
+								.collapse
+									span(name='attr_note')
 								.settings
-									h3(data-i18n='name') name
 									label(data-i18n-title='name' title='name')
 										input(name='attr_name' placeholder='Name' title='@{repeating_preperations_${x}_name}' type='text' value='')
-									h3(data-i18n='force') force
 									label(data-i18n-title='force' title='force')
 										input(name='attr_force' placeholder='1' title='@{repeating_preperations_${x}_force}' type='number' value='')
-									h3(data-i18n='potency') potency
 									label(data-i18n-title='potency' title='potency')
 										input(name='attr_potency' placeholder='1' title='@{repeating_preperations_${x}_potency}' type='number' value='')
-									h3(data-i18n='trigger') trigger
-									select(name='attr_trigger' title='@{repeating_preperations_${x}_trigger}')
-										option(data-i18n='command' value='command') command
-										option(data-i18n='contact' value='contact') contact
-										option(data-i18n='time' value='time') time
-										option(data-i18n='special' value='special') special
+									select(name='attr_trigger' title='@{repeating_preperations_${x}_trigger}' value='Command')
+										optgroup(label='Trigger') Trigger
+											option(data-i18n='command' value='Command') command
+											option(data-i18n='contact' value='Contact' selected) contact
+											option(data-i18n='time' value='Time') time
+											option(data-i18n='special' value='Special') special
 									h3(data-i18n='notes') notes
 									label(data-i18n-title='notes' title='notes')
 										textarea(name='attr_note' placeholder='Notes' title='@{repeating_preperations_${x}_note}' type='text' value='')
