--- a/Shadowrun5thEdition/src/pug/_mixins.pug
+++ b/Shadowrun5thEdition/src/pug/_mixins.pug
@@ -11,19 +11,21 @@ mixin skillButton(specialization)
     button(name=rollName type='roll' value!=rollBeginging+'{{header=@{skill}}}{{base=@{display_attribute}}}{{dice=[[(('+rollFormula+')'+rollEnding+'{{desc='+desc+'}}')
         span(name=display)
 
+//- ROLLS
+mixin displayRollButton(button, wounds)
+    - const rollTemplateBeginning = wounds ? rollBeginging : noWoundsRollBegining;
+    - const rollTemplateEnding = wounds ? rollEnding : noWoundsRollEnding;
+    button(name=button['name'] type='roll' value!=rollTemplateBeginning+'{{header='+button['header']+'}}{{base=^{base}}}{{dice=[[(('+button['rollFormula']+')'+rollTemplateEnding+button['desc'])
+         span(name='attr_'+button['display'])
+
 //- SOAK ROLL
 mixin soakRoll(header, base, rollForumla)
-    button(data-i18n=header name=header type='roll' value!=soakRollBeginging+'{{header=^{'+header+'}}}{{base='+base+'}}{{dice=[[(('+rollForumla+')'+soakRollEnding) #{name}
+    button(data-i18n=header name=header type='roll' value!=noWoundsRollBegining+'{{header=^{'+header+'}}}{{base='+base+'}}{{dice=[[(('+rollForumla+')'+noWoundsRollEnding) #{name}
 
 //- SPRITE BUTTONS
 mixin spriteButton(header, display)
     button(name=header type='roll' value!=rollBeginging+'{{header=@{'+header+'}}}{{base=^{level}}}{{dice=[[((@{level}+@{level})'+rollEnding)
         span(name='attr_'+display)
-
-//- BUTTONS FOR NPCS
-mixin npcButton(button)
-    button(name=button['name'] type='roll' value!=rollBeginging+'{{header=@{'+button['header']+'}}}{{base=^{base}}}{{dice=[[(('+button['rollFormula']+')'+rollEnding+button['desc'])
-         span(name='attr_'+button['display'])
 
 //- NPC ATTRIBUTE ROLLS
 mixin npcAttributeButton(attribute, rollFormula)
@@ -86,4 +88,78 @@ mixin fadeDrainSection(fadeOrDrain)
         +attributeSelect('Willpower')
     h3(data-i18n='modifier') modifier
     label(data-i18n-title='modifier' title='modifier')
-        input(name='attr_'+fadeOrDrain+'_modifier' title='@{'+fadeOrDrain+'_modifier}' type="number" value=0)
+        input(name='attr_'+fadeOrDrain+'_modifier' title='@{'+fadeOrDrain+'_modifier}' type='number' value=0)
+
+//- PC SPELLS AND PREPARATIONS
+mixin pcSpells(type)
+    - const rollInfoObject = type === 'preps' ? pcAlchemySpellObject : pcSorcerySpellObject;
+    - const repeatingSection = `@{repeating_${type}`+'_${x}';
+    
+    .rows.repeating-container
+        .row-long.headers
+            each val in ['spells', 'type', 'range', 'duration', 'drain']
+                h3(data-i18n=val) #{val}
+        fieldset(class=`repeating_`+type)
+            input(name='attr_dicepool' type='hidden' value='0')
+            +displayRollButton(pcSpellButton, true)
+            each val in ['type', 'range', 'duration', 'drain']
+                span.center(name='attr_'+val)
+            input.collapse-flag(name='attr_display_flag' type='checkbox')
+            span.pictos i
+            input.settings-toggle(name='attr_flag' title='Settings toggle' type='checkbox' checked)
+            span.pictos x
+            .collapse
+                span(name='attr_note')
+            .settings
+                each val, key in pcCoreSpellObject
+                    - const translationKey = key.toLowerCase();
+                    - const attrName = key.toLowerCase();
+                    if val['type'] === 'select'
+                        select(name=`attr_${attrName}` title=`${repeatingSection}_${attrName}}` value=val['default'])
+                            each type in val['array']
+                                - const i18n = type.toLowerCase();
+                                if val['default'] === i18n
+                                    option(data-i18n=i18n value=type 'selected') #{i18n}
+                                else
+                                    option(data-i18n=i18n value=type) #{i18n}
+                    else
+                        label(data-i18n-title=translationKey title=key)
+                            input(name=`attr_${attrName}` placeholder=val['placeholder'] title=`${repeatingSection}_${attrName}}` type=val['type'])
+                .row
+                    each val, key in pcCatagorySpellObject
+                        - const translationKey = key.toLowerCase().replace(' ', '');
+                        - const attrName = key === 'Combat' ? 'combat_type' : key.toLowerCase();
+                        h3(data-i18n=translationKey) #{key}
+                        if val['type'] === 'select'
+                            select(name=`attr_${attrName}` title=`${repeatingSection}_${attrName}}` value=val['default'])
+                                each type in val['array']
+                                    - const i18n = key === 'Combat' ? type.split(' ')[0].replace(',','').toLowerCase() : type.toLowerCase();
+                                    if val['default'] === i18n
+                                        option(data-i18n=i18n value=type 'selected') #{i18n}
+                                    else if i18n === 'force'
+                                        option(value=type 'selected')
+                                    else
+                                        option(data-i18n=i18n value=type) #{i18n}
+                        else
+                            label(data-i18n-title=translationKey title=key)
+                                input(name=`attr_${attrName}` placeholder=val['placeholder'] title=`${repeatingSection}_${attrName}}` type=val['type'])
+                .row
+                    each val, key in rollInfoObject
+                        - const translationKey = key.toLowerCase().replace(' ', '');
+                        - const attrName = key === 'modifier dice' ? 'dicepool_modifier' : key.includes('Group') ? key.split(' ')[0].toLowerCase() : key === 'Notes' ? 'note' : key.toLowerCase();
+                        h3(data-i18n=translationKey) #{key}
+                        if val['type'] === 'select'
+                            select(name=`attr_${attrName}` title=`${repeatingSection}_${attrName}}` value=val['default'])
+                                each type in val['array']
+                                    - const i18n = type.includes('Group') ? type.toLowerCase().replace(' ', '') : type.toLowerCase();
+                                    - const attrName = type.includes('Group') ? type.toLowerCase().split(' ')[0] : type.toLowerCase();
+                                    if val['default'] === `@{${attrName}}`
+                                        option(data-i18n=i18n value=type 'selected') #{i18n}
+                                    else
+                                        option(data-i18n=i18n value=type) #{i18n}
+                        else
+                            label(data-i18n-title=translationKey title=key)
+                                input(name=`attr_${attrName}` placeholder=val['placeholder'] title=`${repeatingSection}_${attrName}}` type=val['type'])
+                h3(data-i18n='notes') notes
+                label(data-i18n-title='notes' title='notes')
+                    textarea(name='attr_note' placeholder='Notes' title=repeatingSection+'note}' type='text' value='')
