--- a/Shadowrun5thEdition/src/scss/_pc.scss
+++ b/Shadowrun5thEdition/src/scss/_pc.scss
@@ -1017,39 +1017,23 @@
 		.sheet-magic .sheet-htab {margin-right: -45px;}
 		.sheet-magic .sheet-htab:first-child {margin-left: -45px;}
 
-		div.sheet-spell-box {
-			h3[data-i18n="modifier"] { width: 12%; }
-
-
-			div.sheet-magic-preps {
-				select { width: 14%; }
-			}
-		}
-
-		.sheet-spell-box h3,
-		.sheet-spell-box .sheet-display .sheet-display-row,
 		.sheet-powers-box h3,
 		.sheet-powers-box .sheet-settings input[type='text'],
 		.sheet-powers-box .sheet-display .sheet-display-row:nth-of-type(1) {
-			margin-right: 1%;}
-
-		.sheet-spell-box h3 {width: 13%;}
+			margin-right: 1%;
+		}
 
 		.sheet-powers-box h3,
 		.sheet-powers-box input[type='number'],
-		.sheet-spell-box h3:nth-of-type(5),
 		.sheet-powers-box h3:nth-of-type(3),
 		.sheet-powers-box .sheet-display .sheet-display-row:nth-of-type(2) {
-			width: 8%;}
+			width: 8%;
+		}
 
-		.sheet-spell-box h3:nth-of-type(1),
-		.sheet-spell-box input[type='text'] {
-			width: 40%;}
-
-		.sheet-spell-box h3:nth-of-type(5),
 		.sheet-powers-box h3:nth-of-type(3),
 		.sheet-powers-box .sheet-display .sheet-display-row:nth-of-type(2) {
-			margin-right: 0px;}
+			margin-right: 0px;
+		}
 
 		.sheet-powers-box h3:nth-of-type(1),
 		.sheet-powers-box .sheet-settings input[type='text'],
@@ -1064,15 +1048,6 @@
 				.sheet-magic-rituals .sheet-settings select {width: 32%;}
 
 		/***** MAGIC DISPLAY *****/
-			.sheet-spell-box .sheet-display .sheet-display-row {
-				text-align: left;
-				width: 14%;}
-
-			.sheet-spell-box .sheet-display .sheet-display-row:nth-of-type(1) {width: 39%;}
-			.sheet-spell-box .sheet-display .sheet-display-row:nth-of-type(3) {width: 13%;}
-			.sheet-spell-box .sheet-display .sheet-display-row:nth-of-type(4) {width: 16%;}
-			.sheet-spell-box .sheet-display .sheet-display-row:nth-of-type(5) {width: 6%;}
-
 			.sheet-combat-type-hide {display: none;}
 
 				.sheet-combat-type[value*='Direct'] + span:after,
